test bangs z-index safari issue

--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -197,18 +197,13 @@
           clip-path: ellipse(70% 75%);
         }
       }
-
-      .butler-container {
-        opacity: 0;
-        transition: 1.5s;
-        top: 25% !important;
-        left: -100px !important;
-        .butler-text {
-          display: none;
-        }
-      }
-
-      .janky {
+    }
+    .butler-container {
+      opacity: 0;
+      transition: 1.5s;
+      top: 25% !important;
+      left: -100px !important;
+      .butler-text {
         display: none;
       }
     }
@@ -310,34 +305,7 @@
         }
       }
 
-      .panel-left:hover ~ .butler-container {
-        filter: drop-shadow(14px 0 20px var(--lp-shadow-color));
-        transition: 1s ease-in-out;
-        z-index: 100 !important;
-        .butler-text {
-          transform: rotate3d(5, 6, -12, -1deg) translate(5px);
-          transition: 1s ease-in-out;
-          z-index: 100 !important;
-        }
-        .butler-text::after {
-          transform: rotate3d(5, 6, 12, -1deg);
-          transition: 1s ease-in-out;
-          z-index: 100 !important;
-        }
-        .butler-image {
-          z-index: 100 !important;
-          .butler {
-            z-index: 100 !important;
-            transform: rotate3d(5, 6, -12, -1deg);
-            transition: 1s ease-in-out;
-          }
-          .podium {
-            z-index: 100 !important;
-            transform: rotateY(0deg);
-            transform: 1s ease-in-out;
-          }
-        }
-      }
+ 
 
       .panel-right {
         z-index: 99;
@@ -375,35 +343,6 @@
         }
       }
 
-      .panel-right:hover ~ .butler-container {
-        filter: drop-shadow(-14px 0 20px var(--lp-shadow-color));
-        transition: 1s ease-in-out;
-        z-index: 100 !important;
-        .butler-text {
-          transform: rotate3d(5, 6, -12, 1deg) translate(-5px);
-          transition: 1s ease-in-out;
-          z-index: 100 !important;
-        }
-        .butler-text::after {
-          transform: rotate3d(5, 6, 12, 1deg);
-          transition: 1s ease-in-out;
-          z-index: 100 !important;
-        }
-        .butler-image {
-          z-index: 100 !important;
-          .butler {
-            transform: rotate3d(5, 6, 12, -1deg);
-            transition: 1s ease-in-out;
-            z-index: 100 !important;
-          }
-          .podium {
-            transform: rotateY(12deg);
-            transition: 1s ease-in-out;
-            z-index: 100 !important;
-          }
-        }
-      }
-
       .panel-center {
         z-index: 99;
         grid-column: 2;
@@ -430,20 +369,6 @@
         }
       }
 
-      .panel-center:hover ~ .butler-container {
-        .butler-image {
-          .butler {
-            -webkit-transform: scale(1.01);
-            transform: scale(1.01);
-            transition: 1s ease-in-out;
-          }
-          .podium {
-            transform: rotateY(6deg);
-            transition: 1s ease-in-out;
-          }
-        }
-      }
-
       .text-container {
         text-align: center;
         height: auto;
@@ -462,48 +387,7 @@
           filter: drop-shadow(0px 0px 0px var(--lp-shadow-color));
         }
       }
-
-      .janky {
-        position: absolute;
-        background-color: var(--lp-bg);
-        z-index: 1;
-        pointer-events: none;
-      }
-
-      .left-border {
-        height: 100%;
-        width: 5%;
-        left: -1px;
-        top: 0;
-        transform: rotate(2deg);
-      }
-      .right-border {
-        height: 100%;
-        width: 5%;
-        right: -1px;
-        top: 0;
-        transform: rotate(-2deg);
-      }
-      .top-right-border {
-        height: 40px;
-        width: 100%;
-        top: -41px;
-        left: 0;
-        transform: rotate(2deg);
-      }
-      .top-left-border {
-        height: 40px;
-        width: 100%;
-        top: -41px;
-        left: 0;
-        transform: rotate(-2deg);
-      }
-      .bottom-border {
-        height: 50vh;
-        width: 100%;
-        top: 51%;
-        left: 0;
-      }
+     
       .cafe-clip {
         width: 100%;
         height: 100%;
@@ -581,12 +465,11 @@
 
     .butler-container {
       position: absolute;
-      top: 10%;
+      top: 300px;
       left: calc(50% - 400px);
       transform: translate(-50%);
-      height: 50%;
+      height: 58%;
       width: fit-content;
-      z-index: 1;
       pointer-events: none;
       filter: drop-shadow(0 0 20px var(--lp-shadow-color));
       transition: 1s ease-in-out;
@@ -640,6 +523,81 @@
           left: 0;
           width: 100%;
           height: auto;
+          transform: rotateY(6deg);
+          transition: 1s ease-in-out;
+        }
+      }
+    }
+
+      // bangs left hover
+    .class1 {
+      filter: drop-shadow(14px 0 20px var(--lp-shadow-color));
+      transition: 1s ease-in-out;
+      
+      .butler-text {
+        transform: rotate3d(5, 6, -12, -1deg) translate(5px);
+        transition: 1s ease-in-out;
+        
+      }
+      .butler-text::after {
+        transform: rotate3d(5, 6, 12, -1deg);
+        transition: 1s ease-in-out;
+        
+      }
+      .butler-image {
+        
+        .butler {
+          
+          transform: rotate3d(5, 6, -12, -1deg);
+          transition: 1s ease-in-out;
+        }
+        .podium {
+          
+          transform: rotateY(0deg);
+          transform: 1s ease-in-out;
+        }
+      }
+    }
+
+      // bangs right hover
+    .class2 {
+      filter: drop-shadow(-14px 0 20px var(--lp-shadow-color));
+      transition: 1s ease-in-out;
+      
+      .butler-text {
+        transform: rotate3d(5, 6, -12, 1deg) translate(-5px);
+        transition: 1s ease-in-out;
+        
+      }
+      .butler-text::after {
+        transform: rotate3d(5, 6, 12, 1deg);
+        transition: 1s ease-in-out;
+        
+      }
+      .butler-image {
+        
+        .butler {
+          transform: rotate3d(5, 6, 12, -1deg);
+          transition: 1s ease-in-out;
+          
+        }
+        .podium {
+          transform: rotateY(12deg);
+          transition: 1s ease-in-out;
+          
+        }
+      }
+    }
+
+    // bangs center hover
+    .class3 {
+      .butler-image {
+        .butler {
+          -webkit-transform: scale(1.01);
+          transform: scale(1.01);
+          transition: 1s ease-in-out;
+        }
+        .podium {
           transform: rotateY(6deg);
           transition: 1s ease-in-out;
         }
@@ -751,7 +709,7 @@
   .lp-wrapper {
     .lp-container {
       .butler-container {
-        left: 7vw;
+        left: 19vw;
       }
     }
   }
